tests/spec/emit/snapshots/function_named_like_a_variant_of_its_return_enum_calls_the_function.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  enum Shade { Light, Dark }
  
  fn Light() -> Shade { Shade.Dark }
  
  fn test() -> Shade {
    Light()
  }
---
package main

func MakeShadeLight() Shade {
	return Shade{Tag: ShadeLight}
}

func MakeShadeDark() Shade {
	return Shade{Tag: ShadeDark}
}

type ShadeTag uint8

const (
	ShadeLight ShadeTag = iota
	ShadeDark
)

type Shade struct {
	Tag ShadeTag
}

func Light() Shade {
	return MakeShadeDark()
}

func test() Shade {
	return Light()
}
