tests/spec/emit/snapshots/function_returning_bool.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn is_positive(x: int) -> bool {
    x > 0
  }
---
package main

func isPositive(x int) bool {
	return x > 0
}
