tests/spec/emit/snapshots/function_type_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type IntPredicate = fn(int) -> bool
  
  fn apply(f: IntPredicate, x: int) -> bool {
    f(x)
  }
  
  fn test() -> bool {
    apply(|x| x > 0, 42)
  }
---
package main

type IntPredicate func(int) bool

func apply(f IntPredicate, x int) bool {
	return f(x)
}

func test() bool {
	return apply(func(x int) bool {
		return x > 0
	}, 42)
}
