tests/spec/emit/snapshots/function_type_alias_callable.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Transformer = fn(int) -> int
  
  fn apply(t: Transformer, val: int) -> int {
    t(val)
  }
  
  fn double(x: int) -> int {
    x * 2
  }
  
  fn test() -> int {
    apply(double, 21)
  }
---
package main

type Transformer func(int) int

func apply(t Transformer, val int) int {
	return t(val)
}

func double(x int) int {
	return x * 2
}

func test() int {
	return apply(double, 21)
}
