tests/spec/emit/snapshots/function_type_as_return.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn make_adder(n: int) -> fn(int) -> int {
    |x: int| x + n
  }
  
  fn test() -> int {
    let add5 = make_adder(5);
    add5(10)
  }
---
package main

func makeAdder(n int) func(int) int {
	return func(x int) int {
		return x + n
	}
}

func test() int {
	add5 := makeAdder(5)
	return add5(10)
}
