tests/spec/emit/snapshots/function_type_with_mut_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn run(items: mut Slice<int>, action: fn(mut Slice<int>) -> ()) {
    action(items)
  }
  
  fn bump(items: mut Slice<int>) {
    items[0] += 1
  }
  
  fn test() {
    let mut data = [0]
    run(data, bump)
  }
---
package main

func run(items []int, action func([]int)) {
	action(items)
}

func bump(items []int) {
	items[0]++
}

func test() {
	data := []int{0}
	run(data, bump)
}
