tests/spec/emit/snapshots/function_with_mut_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn process(items: mut Slice<int>) {
    items[0] = 1
  }
---
package main

func process(items []int) {
	items[0] = 1
}
